<resources>
    <string name="app_name">RabbitHabbit</string>
    <string name="google_web_client_id">558572922532-oviri9ic9qt47rnvrvmuptflkeb3kq6m.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2153253404721031</string>
    <string name="fb_login_protocol_scheme">fb2153253404721031</string>
    <string name="how_should_we_call_you">HOW SHOULD WE CALL YOU?</string>
    <string name="email_input">Email</string>
    <string name="name_input">Name</string>
    <string name="password_input">Password</string>
    <string name="confirm_password_input">Confirm password</string>
    <string name="register_finally">Register</string>
    <string name="fb_log">Login with Facebook</string>
    <string name="google_log">Login with Google</string>
    <string name="login">Login</string>
    <string name="details">Details: </string>
    <string name="stats">Statistics</string>
    <string name="pusblishing">Would you like to publish it?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="habitsname">Habit name</string>
    <string name="habitsdruration">Duration</string>
    <string name="addownhabit">Add your own habit</string>
    <string name="showtrendinghabits">Show trending ones</string>
    <string name="addhabit">Add to your list</string>
    <string name="add">Add</string>
    <string name="addhabitname">Name:</string>
    <string name="title_activity_button">Button</string>
    <string name="title_activity_test">Settings</string>
    <string name="profile_picture">Profile picture</string>
    <string name="button_log_out">Log out</string>
    <string name="button_habit1">Eat more vegetables</string>
    <string name="button_habit2">Work out 3 times a week</string>
    <string name="button_habit3">Read book 30 minutes a day</string>
    <string name="button_habit4">Wake up at 6 am every day</string>
    <string name="button_habit5">Bike to school instead of taking the bus</string>
    <string name="daily_story">Daily story</string>
    <string name="story_title">Story of the day</string>
    <string name="welcome_name">Hello Brian</string>
    <string name="duration">Set the duration in a number of days</string>
    <string name="total_number_of_habits">No. of habits</string>
    <string name="total_number_of_stories">No. of stories</string>
    <string name="mood_title">How would you describe your day?</string>
    <string name="story_hint">Tell us what happened today!</string>

    <string-array name="welcome">
        <item>Hello Brian</item>
        <item>Enjoy our app</item>
    </string-array>
    <string name="key_notification">notification_frequency</string>
    <string-array name="notifications">
        <item>Morning - 9:00am (GMT+2)</item>
        <item>Afternoon - 2:00pm (GMT+2)</item>
        <item>Evening - 7:00pm (GMT+2)</item>
    </string-array>
    <string-array name="default_value_for_notifications">
        <item>Afternoon - 2:00pm (GMT+2)</item>
    </string-array>
    <string-array name="snooze">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>5 hours</item>
    </string-array>
    <string name="story_content">Today\'s classes were interesting, but my mom called my in a middle of them to tell me that my do died. It really hurt me.</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display date</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rabbit Habbit</string>
    <string name="nav_header_subtitle">sample @gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
