<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/another_gradient">

    <Button
        android:id="@+id/registerWithEmailButton3"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="165dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/my_button3"
        android:onClick="registerUser"
        android:shadowColor="@android:color/black"
        android:shadowDx="@android:integer/config_shortAnimTime"
        android:shadowDy="@android:integer/config_shortAnimTime"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:text="@string/register_finally"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.192" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="432dp"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/email_input"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="#666565"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/name_input"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="#666565"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_email"
        app:layout_constraintVertical_bias="0.047" tools:targetApi="o" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="#666565"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.029"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passwordConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/confirm_password_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="#666565"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.029" tools:targetApi="o" />

    <TextView
        android:id="@+id/header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:text="@string/how_should_we_call_you"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConf" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="314dp"
        android:layout_height="202dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/divider"
        android:layout_width="291dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/header_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConf" />

</android.support.constraint.ConstraintLayout>