<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0091EA">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAdd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        app:srcCompat="@drawable/plus" />

    <TextView
        android:id="@+id/questionBar"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:shadowColor="@color/common_google_signin_btn_text_light_pressed"
        android:text="@string/pusblishing"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/com_facebook_button_background_color_focused"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloudArea"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/nameOfHabit"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_input"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <EditText
        android:id="@+id/durationOfHabit"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/habitsdruration"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfHabit"
        app:layout_constraintVertical_bias="0.013" />

    <TextView
        android:id="@+id/detailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/details"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationOfHabit"
        app:layout_constraintVertical_bias="0.014" />

    <View
        android:id="@+id/cloudArea"
        android:layout_width="352dp"
        android:layout_height="225dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/my_button_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/detailsEditText"
        android:layout_width="310dp"
        android:layout_height="188dp"
        app:layout_constraintBottom_toBottomOf="@+id/cloudArea"
        app:layout_constraintEnd_toEndOf="@+id/cloudArea"
        app:layout_constraintStart_toStartOf="@+id/cloudArea"
        app:layout_constraintTop_toTopOf="@+id/cloudArea" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="371dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionBar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/yesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/noButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </LinearLayout>
        </LinearLayout>

    </RadioGroup>

    <Button
        android:id="@+id/addButton"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/my_button3"
        android:text="@string/addhabit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.144" />

</android.support.constraint.ConstraintLayout>